# mindbot

./: .gitignore  AGENTS.md  CLAUDE.md  QA.md  README.md  pyproject.toml  requirements-docs.txt  requirements.txt  zensical.toml
.github/workflows/: deploy-docs.yml
benchmark/real-tools/: README.md  runner.py  scenarios.json  visualize_report.py
docs/: index.md  technical-debt.md  testing.md
docs/api/: agent.md  context.md  enums.md  index.md  mindbot.md  models.md
docs/architecture/: L1-interface-transport.md  L2-application-orchestration.md  L3-conversation-domain.md  execution-flow.md  overview.md
docs/changelog/: index.md  v0.1.md  v0.2.md  v0.3.3.md  v0.3.md
docs/configuration/: channels-config.md  guide-zh.md  index.md  providers.md  security.md
docs/develop/: GIT_GUIDE.md  claudecode-message-loop-analysis.md  contributing.md  index.md  mindbot-message-loop-analysis.md  mindbot-tool-workspace-analysis.md
docs/guide/: cli-reference.md  examples.md  index.md  installation.md  multi-agent.md  quickstart.md  shell-commands.md  skills.md
docs/modules/: index.md
docs/stylesheets/: extra.css
docs/testing/: index.md  real-tools.md  toolcall15-baseline-template.md  toolcall15.md
examples/: 01_simple_chat.py  02_multi_turn.py  03_streaming.py  04_event_callbacks.py  05_system_prompt.py  06_tool_approval.py  07_multi_agent.py  08_config_from_code.py  09_tool_whitelist.py  10_child_agent.py  11_tool_example.py  12_multimodal_vision.py  13_memory_system.py  __init__.py  realtime_config_demo.py
scripts/: convert_data_to_memory.py  prepare_knowledge.py  process_long_term_memory.py  test_memory_direct.py  test_memory_phase2.py  test_memory_phase3.py  test_memory_phase4.py  test_memory_phase5.py  test_memory_phase6.py  test_memory_retrieval.py
skills/: async-patterns.md  design-principles.md  python-conventions.md  testing-guide.md
src/mindbot/: __init__.py  __main__.py  bot.py  utils.py
tests/: __init__.py  conftest.py
tests/agent/: test_agent_refactoring.py  test_hot_reload.py  test_input_builder.py  test_persistence_writer.py  test_real_mindagent_chat.py  test_scheduler.py  test_session_journal_integration.py  test_turn_engine.py
tests/benchmarking/: test_real_tools_benchmark.py  test_toolcall15_adapter.py
tests/bot/: test_system_prompt_loading.py
tests/builders/: test_agent_builder_skills.py  test_agent_builder_workspace.py
tests/bus/: test_outbound.py
tests/capability/: conftest.py  test_executor.py  test_facade.py  test_registry.py
tests/channels/: test_feishu.py  test_http.py  test_manager.py
tests/cli/: test_generate_config.py  test_shell.py  test_shell_directory_trust.py  test_toolcall15_adapter_cli.py
tests/config/: test_realtime_config.py
tests/context/: test_context_manager.py
tests/generation/: helpers.py  test_executor.py  test_models.py  test_protocols.py  test_registry.py  test_system_prompt.py  test_tool_generator.py  test_validator.py
tests/memory/: __init__.py  (+4 more)
(+241 files in other folders)
